strip down the java server to not require any external dependencies.